# StarWars-Wiki

./: CLAUDE.md  README.md
.claude/memory/: bugs.md  decisions.md  project-state.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/core/: asset_formatter.py  formatters.py  seed_loader.py
backend/data/: beyond_film_assets.csv  character_assets.csv  film_assets.csv  mvp_characters.csv  mvp_films.csv
backend/tests/: test_contract.py  test_routes.py  test_seed_loader.py
data/seeds/: mvp_characters.csv  mvp_films.csv
docs/: Content-Knowledge-Collection-Plan.md  PRD.md  Technical-Design.md  UIUX-Prototype.md
docs/mvp/: Design-to-Component-Mapping.md  MVP-Data-Dictionary-v1.md  Seed-Data-Sources.md  openapi-mvp.yaml
frontend/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/public/assets/: README.md
frontend/src/__tests__/: api.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/components/character/: CharacterCard.tsx
frontend/src/components/film/: BeyondFilmsCarousel.tsx  FilmCard.tsx  FilmTimelineRail.tsx  FilmsClient.tsx
frontend/src/components/graph/: GraphCanvas.tsx  GraphControls.tsx  GraphDetailPopup.tsx
frontend/src/components/layout/: Footer.tsx  Navigation.tsx
frontend/src/components/ui/: AssetPlaceholder.tsx  LoadingSkeleton.tsx  StarWarsBackground.tsx
frontend/src/lib/: api.ts  assets.ts
(+6 files in other folders)
